@@ -23,26 +23,52 @@
 
 package me.shedaniel.rei.plugin.common.displays;
 
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
+import me.shedaniel.rei.api.common.display.Display;
+import me.shedaniel.rei.api.common.display.DisplaySerializer;
 import me.shedaniel.rei.api.common.display.basic.BasicDisplay;
 import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryIngredients;
 import me.shedaniel.rei.plugin.common.BuiltinPlugin;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.network.codec.ByteBufCodecs;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.crafting.CampfireCookingRecipe;
 import net.minecraft.world.item.crafting.RecipeHolder;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.OptionalDouble;
 
-public class DefaultCampfireDisplay extends BasicDisplay {
-    private double cookTime;
+public class DefaultCampfireDisplay extends BasicDisplay implements CampfireDisplay {
+    public static final DisplaySerializer<DefaultCampfireDisplay> SERIALIZER = DisplaySerializer.of(
+            RecordCodecBuilder.mapCodec(instance -> instance.group(
+                    EntryIngredient.codec().listOf().fieldOf("inputs").forGetter(DefaultCampfireDisplay::getInputEntries),
+                    EntryIngredient.codec().listOf().fieldOf("outputs").forGetter(DefaultCampfireDisplay::getOutputEntries),
+                    ResourceLocation.CODEC.optionalFieldOf("location").forGetter(DefaultCampfireDisplay::getDisplayLocation),
+                    Codec.DOUBLE.fieldOf("cookTime").forGetter(d -> d.cookTime)
+            ).apply(instance, DefaultCampfireDisplay::new)),
+            StreamCodec.composite(
+                    EntryIngredient.streamCodec().apply(ByteBufCodecs.list()),
+                    DefaultCampfireDisplay::getInputEntries,
+                    EntryIngredient.streamCodec().apply(ByteBufCodecs.list()),
+                    DefaultCampfireDisplay::getOutputEntries,
+                    ByteBufCodecs.optional(ResourceLocation.STREAM_CODEC),
+                    DefaultCampfireDisplay::getDisplayLocation,
+                    ByteBufCodecs.DOUBLE,
+                    d -> d.cookTime,
+                    DefaultCampfireDisplay::new
+            ));
+    
+    private final double cookTime;
     
     public DefaultCampfireDisplay(RecipeHolder<CampfireCookingRecipe> recipe) {
-        this(EntryIngredients.ofIngredients(recipe.value().getIngredients()), Collections.singletonList(EntryIngredients.of(recipe.value().getResultItem(BasicDisplay.registryAccess()))),
-                Optional.ofNullable(recipe.id()), recipe.value().getCookingTime());
+        this(List.of(EntryIngredients.ofIngredient(recipe.value().input())),
+                List.of(EntryIngredients.of(recipe.value().result())),
+                Optional.of(recipe.id().location()), recipe.value().cookingTime());
     }
     
     public DefaultCampfireDisplay(List<EntryIngredient> inputs, List<EntryIngredient> outputs, Optional<ResourceLocation> location, CompoundTag tag) {
@@ -54,8 +80,9 @@ public class DefaultCampfireDisplay extends BasicDisplay {
         this.cookTime = cookTime;
     }
     
-    public double getCookTime() {
-        return cookTime;
+    @Override
+    public OptionalDouble cookTime() {
+        return OptionalDouble.of(cookTime);
     }
     
     @Override
@@ -63,9 +90,8 @@ public class DefaultCampfireDisplay extends BasicDisplay {
         return BuiltinPlugin.CAMPFIRE;
     }
     
-    public static BasicDisplay.Serializer<DefaultCampfireDisplay> serializer() {
-        return BasicDisplay.Serializer.of(DefaultCampfireDisplay::new, (display, tag) -> {
-            tag.putDouble("cookTime", display.cookTime);
-        });
+    @Override
+    public DisplaySerializer<? extends Display> getSerializer() {
+        return SERIALIZER;
     }
 }
